--- a/src/styles/components/events.css
+++ b/src/styles/components/events.css
@@ -1,16 +1,17 @@
-.event_wrapper {
+.event-wrapper {
   margin-top: 2%;
   height: 100%;
   width: 100%;
   display: flex;
 }
 
-.event_columns {
+.event-columns {
   height: 100%;
   width: 50%;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-right: 12px;
 }
 
 /* events.css - basic styling for the event card */
@@ -130,7 +131,10 @@
 @media (min-width: 3200px) {
   .event-title{ font-size: 2.6rem;}
   .event-meta {font-size: 2.4rem;}
-  .event_columns {gap: 30px; }
+  .event-columns {
+    gap: 30px; 
+    margin-right: 30px;
+  }
   .event-bottom { 
     height: 4px; 
     max-height: 4px;
